--- a/ProyectoComunAlumnosGit2122-master/nbproject/private/private.properties
+++ b/ProyectoComunAlumnosGit2122-master/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\mario\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\Almudena\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
